Use retriever platform to fetch articles in the infomedia harvester